Start Trello build

--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "electron-quick-start",
+  "name": "trello-macos",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "A minimal Trello application",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
+  "repository": "https://github.com/nathanbirrell/trello-desktop",
   "keywords": [
     "Electron",
-    "quick",
-    "start",
-    "tutorial",
+    "trello",
+    "desktop",
+    "macos",
     "demo"
   ],
-  "author": "GitHub",
+  "author": "Nathan Birrell",
   "license": "CC0-1.0",
+  "productName": "Trello",
   "devDependencies": {
     "electron": "~1.6.2"
   }
