Add menu and shortcuts, save window dimensions on close and load them on startup

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "CC0-1.0",
   "productName": "Trello",
   "devDependencies": {
-    "electron": "~1.6.2"
+    "electron": "~1.6.2",
+    "electron-config": "^0.2.1"
   }
 }
