--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,7 +6,8 @@ description: Use Overcast as a native macOS application.
 google_analytics: UA-41066869-1
 show_downloads: false
 
-download: https://github.com/nathanbirrell/overcast-macos/releases/latest
+download: https://github.com/nathanbirrell/overcast-macos/releases/download/v0.2.1/Overcast.app.zip
+version: v0.2.1
 
 github:
   user: nathanbirrell
